objects/PC_InteractionParticipant__c.object
<CustomObject>
    <fields>
        <fullName>PC_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Association</label>
        <referenceTo>PC_Association__c</referenceTo>
        <relationshipLabel>Interaction Participants</relationshipLabel>
        <relationshipName>PC_AssociationInteractionParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Interaction__c</fullName>
        <description>Interaction to which Participant is attending</description>
        <label>Interaction</label>
        <referenceTo>PC_Interaction__c</referenceTo>
        <relationshipLabel>Interaction Participants</relationshipLabel>
        <relationshipName>PC_InteractionParticipant</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_ParticipantName__c</fullName>
        <description>Displays Hyperlink to
    - Account or User on Association if Association is available
    - Contact if Practitioner is available</description>
        <formula>IF(
    AND(
	NOT(ISBLANK(PC_Association__c)),
	OR(
	     NOT(ISBLANK(PC_Association__r.PC_Account__c)),
             NOT(ISBLANK(PC_Association__r.PC_Associated_User__c))
	)
    ),
    IF(
	NOT(ISBLANK(PC_Association__r.PC_Account__c)),

	HYPERLINK(&quot;/&quot; &amp;  PC_Association__r.PC_Account__c ,
        PC_Association__r.PC_Account__r.Name ,&quot;_self&quot;),

	IF(
	    NOT(ISBLANK( PC_Association__r.PC_Associated_User__c )),

	    HYPERLINK(&quot;/&quot; &amp;  PC_Association__r.PC_Associated_User__c ,
            PC_Association__r.PC_Associated_User__r.FirstName + &apos; &apos;+
            PC_Association__r.PC_Associated_User__r.LastName ,&quot;_self&quot;),

            &apos;&apos;
        )
    ),
    IF(
         NOT( ISBLANK( PC_Practitioner__c ) ) ,

         HYPERLINK(&quot;/&quot; &amp;   PC_Practitioner__c  ,
         PC_Practitioner__r.FirstName + &apos; &apos; +PC_Practitioner__r.LastName ,&quot;_self&quot;),

         &apos;&apos;
    )
)</formula>
        <label>Participant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Practitioner participating in the interaction</description>
        <label>Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interaction Participants</relationshipLabel>
        <relationshipName>PC_PractitionerInteractionParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Revoked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a Participant selection for an interaction is revoked</description>
        <label>Revoked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Role__c</fullName>
        <description>The Role that the Participant plays as part of the patient&apos;s circle of care.</description>
        <formula>IF(NOT(ISBLANK(PC_Association__c)) ,   TEXT(PC_Association__r.PC_Role__c)  , IF(NOT(ISBLANK( PC_Practitioner__c  )) , $Label.PC_Practitioner  , &apos;&apos;))</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Interaction Participant</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Interaction Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PC_MultipleParticipantsCheck</fullName>
        <active>true</active>
        <description>This rule will ensure to have only one participant from either association or practitioner.</description>
        <errorConditionFormula>OR(AND(ISBLANK( PC_Association__c ),
       ISBLANK( PC_Practitioner__c )),
   AND(NOT(ISBLANK( PC_Association__c )),
       NOT(ISBLANK( PC_Practitioner__c ))))</errorConditionFormula>
        <errorMessage>Please enter either Association or Practitioner as the participant.</errorMessage>
    </validationRules>
</CustomObject>